--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 priority-queue = "2.0.0"
 rayon = "1.10.0"
+serde = { version = "1.0.203", features = ["derive"] }
+bincode = "1.3.3"
